Conversion in AJAX Post Calls for screens Changed Toastr Notification rendering

--- a/Pages/CreateCategory.cshtml
+++ b/Pages/CreateCategory.cshtml
@@ -5,11 +5,9 @@
     TempData["NavigationalPageName"] = "Create Category";
 }
 
-<partial name="_Notification" />
-
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
-    <form method="post" onsubmit="prepareFormSubmission();">
-        <div id="createProfileSection" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:70%;">
+    <form asp-page-handler="Submit" id="createCategoryForm">
+        <div id="createCategoryDiv" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:70%;">
             <input type="hidden" id="SelectedPagesJson" name="SelectedPagesJson" />
 
             <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
@@ -67,7 +65,7 @@
 
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/js/createCategory.js"></script>
+    <script src="~/js/createCategory.js" asp-append-version="true"></script>
     <script>
         // Serialize the pages and categories models into JSON objects
         var availablePagesLst = @Html.Raw(Json.Serialize(Model.AllPageSites));
