--- a/Pages/ReadUserProfile.cshtml
+++ b/Pages/ReadUserProfile.cshtml
@@ -6,11 +6,9 @@
     int @categoryCount = 0;
 }
 
-<partial name="_Notification" />
-
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
-    <form method="post">
-        <div id="createProfileSection" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:70%;font-size:2rem;">
+    <form>
+        <div id="readUserProfileDiv" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:70%;font-size:2rem;">
 
             <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around; height:auto; flex-direction:column; font-size:1.5rem;">
                 <div class="row pb-1 pt-2">
@@ -116,7 +114,6 @@
                     </div>
                     </div>
                 </div>
-
 
                 <hr />
 
