--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
         @await Html.PartialAsync("_PreloaderPartial")
 
         @await Html.PartialAsync("_HeaderPartial")
-        
+
 
         <aside class="main-sidebar sidebar-dark-primary elevation-4 rounded">
             @await Html.PartialAsync("_SidebarPartial")
@@ -104,11 +104,11 @@
     <script src="~/dist/js/pages/dashboard.js"></script>
     <!-- Side Left Panel Features -->
     <script src="~/js/side-left-panel.js"></script>
-
+    <script src="~/js/toastr.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/bootstrap-datepicker.min.js" ></script>
+    <script src="~/js/bootstrap-datepicker.min.js"></script>
     <script src="~/js/chart/highcharts.js"></script>
     <script src="~/js/chart/exporting.js"></script>
     <script src="~/js/chart/drilldown.js"></script>
