--- a/Pages/UpdateTransactionFees.cshtml
+++ b/Pages/UpdateTransactionFees.cshtml
@@ -5,12 +5,10 @@
     TempData["NavigationalPageName"] = "Update Transaction Fees";
 }
 
-<partial name="_Notification" />
-
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
     @if (Model.TransactionFeeAmounts != null && Model.TransactionFeeAmounts.TxnFeeId > 0)
     {
-        <form method="post">
+        <form id="transactionFeeForm" asp-page-handler="Submit">
             <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:50%;">
                 <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
                     <div class="row pb-1 pt-2">
@@ -77,7 +75,7 @@
     else
     {
         <!-- No data, perform add -->
-        <form method="post">
+        <form id="transactionFeeForm" asp-page-handler="Submit">
             <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:50%;">
                 <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
                     <div class="row pb-1 pt-2">
@@ -139,3 +137,9 @@
         </form>
     }
 </div>
+
+@section scripts
+{
+    <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/updateTransactionFees.js" asp-append-version="true"></script>
+}
