--- a/Pages/CreateUserProfile.cshtml
+++ b/Pages/CreateUserProfile.cshtml
@@ -48,7 +48,7 @@
                             <label asp-for="ProfileUsersData.FullName" class="form-label"></label>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                    <span class="input-group-text"><i class="fas fa-id-card"></i></span>
                                 </div>
                                 <input type="text" asp-for="ProfileUsersData.FullName" placeholder="Full Name" class="form-control" />
                             </div>
