--- a/Pages/UpdateUserProfile.cshtml
+++ b/Pages/UpdateUserProfile.cshtml
@@ -124,7 +124,7 @@
                             <label asp-for="ProfileUsersData.FullName" class="form-label"></label>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                    <span class="input-group-text"><i class="fas fa-id-card"></i></span>
                                 </div>
                                 <input type="text" asp-for="ProfileUsersData.FullName" placeholder="Full Name" class="form-control" />
                             </div>
@@ -190,18 +190,18 @@
                                 </div>
                             }
                         </div>
-
-                        <div class="row">
-                            <div class="col-2"></div>
-                            <div class="col-3 me-4">
-                                <button type="submit" class="btn create-btn" style="width:140px;">Update</button>
+                        <div style="display: flex; justify-content:space-around;height:auto;">
+                            <div class="row">
+                                <div class="col-2"></div>
+                                <div class="col-3 me-4">
+                                    <button type="submit" class="btn create-btn" style="width:140px;">Update</button>
+                                </div>
+                                <div class="col-4 ms-3">
+                                    <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                                </div>
+                                <div class="col-3"></div>
                             </div>
-                            <div class="col-4 ms-3">
-                                <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
-                            </div>
-                            <div class="col-3"></div>
                         </div>
-
                     </div>
                 </div>
             </div>
