--- a/Pages/CreateCategory.cshtml
+++ b/Pages/CreateCategory.cshtml
@@ -33,7 +33,12 @@
                         <!-- Profile Dropdown -->
                         <div class="mb-3">
                             <label asp-for="SelectedPageCategory.CategoryName" class="form-label" style=""></label>
-                            <input asp-for="SelectedPageCategory.CategoryName" placeholder="Category Name" class="form-control" />
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-atom"></i></span>
+                                </div>
+                                <input asp-for="SelectedPageCategory.CategoryName" placeholder="Category Name" class="form-control" />
+                            </div>
                             <span asp-validation-for="SelectedPageCategory.CategoryName" class="text-danger fw-bold"></span>
                         </div>
                         <!-- Checkboxes to select pages -->
