--- a/Pages/Shared/_SidebarPartial.cshtml
+++ b/Pages/Shared/_SidebarPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿<!-- Brand Logo -->
 <a href="#" class="brand-link">
-    <img src="dist/img/Spider_Logo.jpg" alt="Spider Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+    <img src="dist/img/Spider_Logo.jpg" alt="Spider Logo" class="brand-image img-thumbnail rounded-circle elevation-3 " style="opacity: .8">
     <span class="brand-text font-weight-light">Spider</span>
 </a>
 <!-- Sidebar -->
@@ -11,7 +11,7 @@
             <img src="" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info" id="userNameDiv">
-            <a href="/ReadUserProfile" class="d-block"></a>
+            <a href="/EditSettings" class="d-block"></a>
         </div>
     </div>
     <!-- SidebarSearch Form -->
