--- a/Pages/UpdateCategory.cshtml
+++ b/Pages/UpdateCategory.cshtml
@@ -35,13 +35,18 @@
                         <!-- Profile Dropdown -->
                         <div class="mb-3">
                             <label asp-for="SelectedPageCategory.CategoryName" class="form-label">Select Category</label>
-                            <select asp-for="SelectedPageCategory.CategoryName" class="form-select striped-select" id="CategoryIdDiv">
-                                <option value="" disabled selected>Select a Category</option>
-                                @foreach (var category in Model.AllCategories)
-                                {
-                                    <option value="@category.PageCatId">@category.CategoryName</option>
-                                }
-                            </select>
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-atom"></i></span>
+                                </div>
+                                <select asp-for="SelectedPageCategory.CategoryName" class="form-select striped-select" id="CategoryIdDiv">
+                                    <option value="" disabled selected>Select a Category</option>
+                                    @foreach (var category in Model.AllCategories)
+                                    {
+                                        <option value="@category.PageCatId">@category.CategoryName</option>
+                                    }
+                                </select>
+                            </div>
                             <span asp-validation-for="SelectedPageCategory.CategoryName" class="text-danger fw-bold" ></span>
                         </div>
 
@@ -61,7 +66,7 @@
                                     <button type="submit" class="btn create-btn" style="width:140px;">Update</button>
                                     </div>
                                     <div class="col-4 ms-3">
-                                        <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                                        <a asp-page="/Index" class="btn btn-secondary shadow" style="width:180px;"> Back to Transactions</a>
                                     </div>
                                     <div class="col-3"></div>
                                 </div>
