--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
     <!-- SpiderWeb dashboard demo (This is only for demo purposes) -->
     <script src="~/dist/js/pages/dashboard.js"></script>
     <!-- Side Left Panel Features -->
-    <script src="~/js/side-left-panel.js"></script>
+    <script src="~/js/side-left-panel.js" asp-append-version="true"></script>
     <script src="~/js/toastr.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
