--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -34,19 +34,187 @@
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
-        @await Html.PartialAsync("_PreloaderPartial")
+        @* @await Html.PartialAsync("_PreloaderPartial")
 
-        @await Html.PartialAsync("_HeaderPartial")
+        <!-- Preloader -->
+        <div class="preloader flex-column justify-content-center align-items-center">
+            <img class="animation__shake" src="dist/img/Spider_Logo.jpg" alt="SpiderEMTLogo" height="60" width="60">
+        </div> *@
+
+        @* @await Html.PartialAsync("_HeaderPartial") *@
+        <!-- Navbar -->
+        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+            <!-- Left navbar links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="pushmenu" href="#" role="button">
+                        <i class="fas fa-bars"></i>
+                    </a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+            </ul>
+            <!-- Right navbar links -->
+            <ul class="navbar-nav ml-auto">
+                <!-- Navbar Search -->
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="navbar-search" href="#" role="button">
+                        <i class="fas fa-search"></i>
+                    </a>
+                    <div class="navbar-search-block">
+                        <form class="form-inline">
+                            <div class="input-group input-group-sm">
+                                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                                <div class="input-group-append">
+                                    <button class="btn btn-navbar" type="submit">
+                                        <i class="fas fa-search"></i>
+                                    </button>
+                                    <button class="btn btn-navbar" type="button" data-widget="navbar-search">
+                                        <i class="fas fa-times"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="fullscreen" href="#" role="button">
+                        <i class="fas fa-expand-arrows-alt"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="control-sidebar" data-controlsidebar-slide="true" href="#" role="button">
+                        <i class="fas fa-th-large"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!-- /.navbar -->
 
 
         <aside class="main-sidebar sidebar-dark-primary elevation-4 rounded">
-            @await Html.PartialAsync("_SidebarPartial")
+            @* @await Html.PartialAsync("_SidebarPartial") *@
+            <!-- Brand Logo -->
+            <a href="#" class="brand-link">
+                <img src="dist/img/Spider_Logo.jpg" alt="Spider Logo" class="brand-image img-thumbnail rounded-circle elevation-3 " style="opacity: .8">
+                <span class="brand-text font-weight-light">Spider</span>
+            </a>
+            <!-- Sidebar -->
+            <div class="sidebar">
+                <!-- Sidebar user panel (optional) -->
+                <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                    <div id="userImageDiv" class="image">
+                        <img src="" class="img-circle elevation-2" alt="User Image">
+                    </div>
+                    <div class="info" id="userNameDiv">
+                        <a href="/EditSettings" class="d-block"></a>
+                    </div>
+                </div>
+                <!-- SidebarSearch Form -->
+                <div class="form-inline">
+                    <div class="input-group" data-widget="sidebar-search">
+                        <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
+                        <div class="input-group-append">
+                            <button class="btn btn-sidebar">
+                                <i class="fas fa-search fa-fw"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Sidebar Menu -->
+                <nav class="mt-2">
+                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                        <!-- Add icons to the links using the .nav-icon class
+                         with font-awesome or any other icon font library -->
+                        <li class="nav-item menu-open">
+                            <a href="#" class="nav-link active">
+                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <p>
+                                    Dashboard <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="./index" class="nav-link active">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Dashboard</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-header fw-bolder">Profile View</li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas fa-user-circle"></i>
+                                <p>
+                                    Profile <i class="fas fa-angle-left right"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview ms-2" id="dynamicProfileName" style="border-left:1px ridge #DDDFBF">
+                                <!-- Dynamic Content will be loaded here -->
+                            </ul>
+                        </li>
+
+                        <li class="nav-header fw-bolder">Categories View</li>
+                        <li class="nav-item menu-open">
+                            <ul class="nav nav-treeview" id="dynamicCategoriesList">
+                                <!-- Dynamic Content will be loaded here -->
+                            </ul>
+                        </li>
+
+                        <li class="nav-header fw-bolder">Pages View </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas ion-android-list"></i>
+                                <p>
+                                    Pages <i class="fas fa-angle-left right"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview ms-2" id="dynamicPagesList" style="border-left:1px ridge #DDDFBF">
+                                <!-- Dynamic Content will be loaded here -->
+                            </ul>
+                        </li>
+
+                    </ul>
+                </nav>
+                <!-- /.sidebar-menu -->
+            </div>
+            <!-- /.sidebar -->
         </aside>
 
         <div class="content-wrapper">
 
-            @await Html.PartialAsync("_MainContentWrapper")
-
+            @* @await Html.PartialAsync("_MainContentWrapper") *@
+            <!-- Content Header (Page header) -->
+            <div class="content-header">
+                <div class="container-fluid">
+                    <div class="row mb-2">
+                        <div id="contentHeaderDiv" class="col-sm-6">
+                            <h3 class="m-0">
+                                @TempData["NavigationalPageName"]
+                            </h3>
+                        </div>
+                        <!-- /.col -->
+                        <div class="col-sm-6">
+                            <ol class="breadcrumb float-sm-right">
+                                <li class="breadcrumb-item">
+                                    <a href="#">Home</a>
+                                </li>
+                                <li class="breadcrumb-item active">
+                                    @TempData["NavigationalPageName"]
+                                </li>
+                            </ol>
+                        </div>
+                        <!-- /.col -->
+                    </div>
+                    <!-- /.row -->
+                </div>
+                <!-- /.container-fluid -->
+            </div>
+            <!-- /.content-header -->
             <!-- Main content -->
             <section class="content">
                 <div class="container-fluid" role="main">
@@ -58,7 +226,12 @@
 
         </div>
 
-        @await Html.PartialAsync("_FooterPartial")
+        @* @await Html.PartialAsync("_FooterPartial") *@
+        <footer class="main-footer">
+            <strong>Copyright &copy; <span id="copyright-year"></span> <a href="#">Site Selection</a>. </strong> All rights reserved. <div class="float-right d-none d-sm-inline-block">
+                <!--<b>Version</b> 3.2.0-->
+            </div>
+        </footer>
 
         <!-- Control Sidebar -->
         <aside class="control-sidebar control-sidebar-dark">
