SP Updates, Navigation Repository Updates, Navigation Controller API Updates, Model Creation for New Table Structure and associated approach, Changes over all Create and Update screens

--- a/Pages/UpdateUserProfile.cshtml
+++ b/Pages/UpdateUserProfile.cshtml
@@ -96,6 +96,23 @@
                         </div>
                     </div>
                     <div class="card-body">
+                        <!-- Profile Picture Field -->
+                        <div class="text-center">
+                            <div class="position-relative d-inline-block mx-auto mb-4">
+                                @if (Model.UserProfilePathUrl != null)
+                                {
+                                    <img src="@Model.UserProfilePathUrl" class="rounded-circle img-thumbnail" style="width: 150px; height: 150px;" id="loadedProfilePicture">
+                                }
+                                <div class="position-absolute bottom-0 end-0 rounded-circle bg-light p-1" style="transform: translate(20%, 20%);">
+                                    <input class="d-none" asp-for="ProfileUsersData.PhotoFile" type="file" id="profile-img-file-input" />
+                                    <label for="profile-img-file-input" class="rounded-circle bg-gradient-blue p-2" style="cursor: pointer; width: 40px; height: 40px;">
+                                        <i class="ion ion-android-camera" style="font-size: 1.5rem;"></i>
+                                    </label>
+                                </div>
+                            </div>
+                            <span asp-validation-for="ProfileUsersData.PhotoFile" class="text-danger fw-bold"></span>
+                        </div>
+
                         <!-- User ID and ID Number on one line -->
                         <div class="mb-3" style="display: flex; justify-content: space-between;">
                             <div style="flex: 1; margin-right: 10px;">
@@ -155,6 +172,30 @@
                             </div>
                         </div>
 
+                        <!-- Username and Password on one line -->
+                        <div class="mb-3" style="display: flex; justify-content: space-between;">
+                            <div style="flex: 1; margin-right: 10px;">
+                                <label asp-for="ProfileUsersData.Username" class="form-label"></label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-user-cog"></i></span>
+                                    </div>
+                                    <input type="text" asp-for="ProfileUsersData.Username" placeholder="Username" class="form-control" />
+                                </div>
+                                <span asp-validation-for="ProfileUsersData.Username" class="text-danger fw-bold"></span>
+                            </div>
+                            <div style="flex: 1;">
+                                <label asp-for="ProfileUsersData.Password" class="form-label"></label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-eye-slash"></i></span>
+                                    </div>
+                                    <input type="password" asp-for="ProfileUsersData.Password" placeholder="Password" class="form-control" />
+                                </div>
+                                <span asp-validation-for="ProfileUsersData.Password" class="text-danger fw-bold"></span>
+                            </div>
+                        </div>
+
                         <!-- Dropdown to Select Profile Name -->
                         <div class="mb-3">
                             <label asp-for="ProfileUsersData.ProfileSiteData.ProfileName" class="form-label"></label>
@@ -175,6 +216,36 @@
 
                         <!-- Hidden fields Profile Id -->
                         <input type="hidden" asp-for="ProfileUsersData.ProfileSiteData.ProfileId" id="profileIdHidden" />
+
+                        <!-- Is Active -->
+                        <div class="mb-3">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" asp-for="ProfileUsersData.IsActive" id="isActiveCheckbox" />
+                                <label class="form-check-label" for="isActiveCheckbox">
+                                    Active User
+                                </label>
+                            </div>
+                        </div>
+
+                        <!-- Is Active Directory User -->
+                        <div class="mb-3">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" asp-for="ProfileUsersData.IsActiveDirectoryUser" id="isActiveDirectoryUserCheckbox" />
+                                <label class="form-check-label" for="isActiveDirectoryUserCheckbox">
+                                    Active Directory User
+                                </label>
+                            </div>
+                        </div>
+
+                        <!-- Change Password -->
+                        <div class="mb-3">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" asp-for="ProfileUsersData.ChangePassword" id="changePasswordCheckbox" />
+                                <label class="form-check-label" for="changePasswordCheckbox">
+                                    Change Password
+                                </label>
+                            </div>
+                        </div>
 
                         <div style="display: flex; justify-content:space-around;height:auto;">
                             <div class="row">
